lab1/Test/L1-A-4-71.cmm
tnJm3jd3C9fURVd5yS ;
struct p3dp8ScB {
  struct {
    int IIZeAIsNDQN3ct6luUS 
  }pyaCzRfldYJbH5wAsy ;
  int pXxVy7Uzx5zcm_toxJV [ ] ;
  struct fsJdshw ZRiONabzmaS , ;
  float = pAZnbvhCJYjbHGcLu ;
;
